completed signup page UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
         android:text="@string/password"
         app:layout_constraintBottom_toTopOf="@+id/userPassword"
         app:layout_constraintStart_toStartOf="@+id/userPassword" />
@@ -19,30 +21,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/email"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/userEmail"
         app:layout_constraintStart_toStartOf="@+id/userEmail" />
 
     <EditText
         android:id="@+id/userEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
         android:layout_marginTop="100dp"
+        android:autofillHints="emailAddress"
+        android:background="@drawable/shape"
         android:ems="10"
+        android:textSize="18sp"
         android:inputType="textEmailAddress"
         android:text=""
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintBottom_toTopOf="@+id/userPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.0"
-        android:autofillHints="emailAddress" />
+        tools:ignore="LabelFor" />
 
     <EditText
         android:id="@+id/userPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:textSize="18sp"
         android:layout_marginTop="188dp"
+        android:autofillHints="7 or more alphanumeric characters"
+        android:background="@drawable/shape"
         android:ems="10"
         android:inputType="textPassword"
         android:text=""
@@ -50,7 +61,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        android:autofillHints="7 or more alphanumeric characters" />
+        tools:ignore="LabelFor" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -61,7 +72,8 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/stockpal_logo" />
+        app:srcCompat="@drawable/stockpal_logo"
+        android:contentDescription="@string/stockpal_logo" />
 
     <Button
         android:id="@+id/button"
@@ -74,4 +86,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userPassword"
         app:layout_constraintVertical_bias="0.166" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_up"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.198" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
